--- a/integration.html
+++ b/integration.html
@@ -158,7 +158,7 @@ In each section, we will go through how to build and use the necessary ROS 2 pac
 <p>RMF uses ROS 2 messages and topic interfaces to communicate between different components in the overall RMF system.
 In most cases we use components called Adapters to bridge between the hardware-specific interfaces and the general purpose interfaces of RMF.
 This chapter will discuss how to develop an RMF Adapter for different types of hardware components.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/integration.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/integration.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
