--- a/intro.html
+++ b/intro.html
@@ -233,7 +233,7 @@ The dashboard is by design more &quot;operator-friendly&quot; compared to the pr
 <p><a href="https://github.com/open-rmf/rmf_simulation">rmf_simulation</a> contains the simulation plugins to simulate RMF. Plugins are available in <code>gazebo</code> and <code>ignition</code>.</p>
 <h3 id="simulation-assets"><a class="header" href="#simulation-assets">Simulation Assets</a></h3>
 <p>The open-source and freely distributable <a href="https://app.ignitionrobotics.org/fuel">simulation assets</a> are created and shared to accelerate simulation efforts.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/intro.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/intro.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
