--- a/rmf-web.html
+++ b/rmf-web.html
@@ -149,7 +149,7 @@
 <li><a href="https://github.com/open-rmf/rmf-web/tree/main/example-deployment">example deployment</a></li>
 <li><a href="https://github.com/open-rmf/rmf-cloud-tools">rmf-cloud</a></li>
 </ul>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/rmf-web.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/rmf-web.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
