--- a/ros2.html
+++ b/ros2.html
@@ -193,7 +193,7 @@ print media is helpful at delivering high fidelity instruction, that
 instruction can become rapidly outdated. For this reason we start this chapter
 with a meta-discussion of ROS resources that can be used to help you in your
 learning process.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/ros2.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/ros2.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
