--- a/ros2_api.html
+++ b/ros2_api.html
@@ -488,7 +488,7 @@ and conventions, such as:</p>
 <p>These techniques will serve you well when you start building your own ROS
 applications, especially when you want to share your code with others, whether
 on your team or out in the world.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/ros2_api.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/ros2_api.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
