--- a/ros2_cli.html
+++ b/ros2_cli.html
@@ -1662,7 +1662,7 @@ create a new ROS package. The short of it is that you feed the command your
 package name and all of the relevant information for your package as optional
 arguments.</p>
 <h2 id="ros-2-security"><a class="header" href="#ros-2-security">ROS 2 Security</a></h2>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/ros2_cli.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/ros2_cli.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
