--- a/ros2_design_patterns.html
+++ b/ros2_design_patterns.html
@@ -438,7 +438,7 @@ callbacks you registered.</li>
 short: initialize and configure everything, then call a spin function to let
 ROS take over. When you are trying to understand what is happening in a ROS
 node, look in the callbacks; that is where the real work is happening.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/ros2_design_patterns.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/ros2_design_patterns.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
