--- a/ros2_tools_resources.html
+++ b/ros2_tools_resources.html
@@ -319,7 +319,7 @@ these programs we navigate to the terminal running the program and press the
 <code>Ctrl</code> and <code>C</code> keys simultaneously. We call this combo <code>CTRL-C</code> and you can use
 it to stop just about any program in a terminal. Use it to stop the talker and
 listener programs.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/ros2_tools_resources.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/ros2_tools_resources.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
