--- a/simulation.html
+++ b/simulation.html
@@ -181,7 +181,7 @@ will also be run on the physical system as well without any changes.</p>
 <p>However, despite these compelling benefits, simulations are sparingly employed
 by developers and system integrators, citing complexity over generating
 environments and configuring them with appropriate plugins. In a recent publication &quot;<em>A Study on the Challenges of Using Robotics Simulators for Testing</em>,&quot; by Afsoon Afzal, Deborah S. Katz, Claire Le Goues and Christopher S. Timperley they noted the main reasons participants gave for not using simulation for a particular project and summarized their findings as follows:</p>
-<table><thead><tr><th>Reason for not using simulation</th><th>#</th><th>%</th></tr></thead><tbody>
+<div class="table-wrapper"><table><thead><tr><th>Reason for not using simulation</th><th>#</th><th>%</th></tr></thead><tbody>
 <tr><td>Lack of time or resources</td><td>15</td><td>53.57%</td></tr>
 <tr><td>Not realistic/accurate enough</td><td>15</td><td>53.57%</td></tr>
 <tr><td>Lack of expertise or knowledge on how to use software-based simulation</td><td>6</td><td>21.43%</td></tr>
@@ -191,6 +191,7 @@ environments and configuring them with appropriate plugins. In a recent publicat
 <tr><td>Nobody suggested it</td><td>0</td><td>0.00%</td></tr>
 <tr><td>Other</td><td>2</td><td>7.14%</td></tr>
 </tbody></table>
+</div>
 <p>The RMF project aims to address these hurdles by simplifying the process of setting up
 simulation environments for multi-fleet traffic control, as we will explain further throughout this section.</p>
 <h2 id="building-map-generator"><a class="header" href="#building-map-generator">Building Map Generator</a></h2>
@@ -581,7 +582,7 @@ Once the <a href="https://github.com/open-rmf/rmf_demos/blob/0d4265a6c81a24e2bbf
 It also covered the assets used within simulations and the corresponding plugins necessary for ROS 2 and RMF to interface with them.
 A working example of these components running together, in the form of the <code>rmf_demos_maps</code> package, was provided as a reference for how to actualize a custom system.
 The next chapter will introduces the basic concept behind RMF.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/simulation.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/simulation.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
