--- a/soss.html
+++ b/soss.html
@@ -160,7 +160,7 @@ Any number of <code>soss</code> instances can be run at once, but they will run 
 <p>The base SOSS package also provides some CMake tools to help with auto-generating message definitions for message-passing systems that require static message definitions at compile-time.
 For message-passing systems with dynamic message types, the plugin can automatically take care of the translation at runtime, so auto-generation is unnecessary.</p>
 <p>For a deeper look at how to use SOSS, we recommend reading <a href="https://integration-service.docs.eprosima.com/en/latest/index.html">the documentation provided by eProsima</a>.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/soss.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/soss.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
