--- a/task_planner.html
+++ b/task_planner.html
@@ -140,7 +140,7 @@
                     <main>
                         <h1 id="rmf-task-allocation-planner"><a class="header" href="#rmf-task-allocation-planner">RMF Task Allocation Planner</a></h1>
 <p>Coming soon...</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/task_planner.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/task_planner.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
