--- a/task_types.html
+++ b/task_types.html
@@ -249,7 +249,7 @@ User can set a valid charging station by setting <code>is_parking_spot</code> to
 </li>
 </ol>
 <p><a href="./task_new.html">Click here</a> to learn how to develop support for a custom task.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/task_types.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/task_types.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
