--- a/task_new.html
+++ b/task_new.html
@@ -267,7 +267,7 @@
 <p>Some examples of composed task requests can be found <a href="https://github.com/open-rmf/rmf_demos/pull/122">here</a> as reference. They can be used with <code>rmf_demos</code>. Feel free to modify these files according to your own application.</p>
 <h2 id="task-management-control"><a class="header" href="#task-management-control">Task Management Control</a></h2>
 <p>You may take additional control over your tasks by sending requests to RMF to cancel a task or skip a phase. A full list of JSON schemas for such requests are defined <a href="https://github.com/open-rmf/rmf_api_msgs/tree/main/rmf_api_msgs/schemas">here</a>.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/task_new.md">Edit this file on GitHub.</a></footer>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/task_new.md">Edit this page on GitHub.</a></footer>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
